# MetaPCbin

./: .gitignore  LICENSE  README.md  constants.py  fragment.py  helpers.py  kmer.py  pipeline.py  predict.py  preprocess.py  progress_bar.py  setup.cfg  setup.py
models/: NNModule.py  biomer_minmax_scaler.sav  biomer_model.sav  biomer_model_v1.sav  logistic_model.sav  logistic_model_old.sav  logistic_model_v2.1.sav
pipeline/: constants.py  helpers.py  pipeline.py  progress_bar.py
pipeline/predict/: predict.py  predict_combined.py  predict_nn_rf.py
pipeline/preprocess/: circular.py  fragment.py  gc_content.py  inc_fac.py  kmer.py  orit.py  preprocess.py  rrna.py  write_dataset.py
preprocess/: circular.py  fragment.py  gc_content.py  inc_fac.py  kmer.py  orit.py  preprocess.py  rrna.py  write_dataset.py
src/: pipeline.py
src/preprocess/: circular.py  gc_content.py  inc_fac.py  kmer.py  orit.py  preprocess.py  write_dataset.py
