[metadata]
name = pipeline #TODO: change the module name
version = 0.1.6
author = Chamika Nandasiri, Sasindu Alahakoon, Gayal Dassanayake
author_email = chamikanandasiri97@gmail.com, dilsharasasindu@gmail.com, g.c.dassanayake@gmail.com
description = MetaGSC plasmid/chromosome predictor for metagenomic assemblies.
long_description = file: README.md
keywords = bioinformatics, plasmid, chromosome, metagenomic
long_description_content_type = text/markdown
url = https://github.com/MetaGSC/pipeline
project_urls =
    Bug Tracker = https://github.com/MetaGSC/pipeline/issues
classifiers =
    Operating System :: POSIX :: Linux
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = .
packages = find:
install_requires =
    biopython
    tqdm

python_requires = >=3.6

[options.entry_points]
console_scripts =
    pipeline = pipeline.pipeline:main # change the command name to the module name
