[metadata]
name = MetaPCbin
version = metapcbin.__version__
author = Chamika Nandasiri, Sasindu Alahakoon, Gayal Dassanayake
author_email = chamikanandasiri97@gmail.com, dilsharasasindu@gmail.com, g.c.dassanayake@gmail.com
description = MetaGSC plasmid/chromosome predictor for metagenomic assemblies.
long_description = file: README.md
keywords = bioinformatics, plasmid, chromosome, metagenomic
long_description_content_type = text/markdown
url = https://github.com/MetaGSC/MetaPCbin
project_urls =
    Bug Tracker = https://github.com/MetaGSC/MetaPCbin/issues
classifiers =
    Operating System :: POSIX :: Linux
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = .
packages = find:
install_requires =
    biopython
    tqdm
    scikit-learn==1.0.1
    torch==1.9.0
    torchvision==0.10.0
    matplotlib==3.4.3 
    numpy==1.21.4  
    pandas==1.3.4
    seaborn==0.11.2

python_requires = >=3.6

[options.entry_points]
console_scripts =
    metapcbin = pipeline.pipeline:main
